slider works sending info to backend

--- a/frontend/templates/price.html
+++ b/frontend/templates/price.html
@@ -10,24 +10,105 @@
 
 {% block content %}
 <div class="wrapper">
-    <!-- Sidebar -->
-    <nav id="sidebar">
-        <form method="POST">
-          {% csrf_token %}
-          {{ form | crispy }}
+  <!-- Sidebar -->
+  <nav id="sidebar">
+    <form method="POST">
+      {% csrf_token %}
+      <div id="div_id_operating_system" class="form-group">
+        <label for="id_operating_system" class="col-form-label ">
+          Operating system
+        </label>
+        <div class="">
+          <select name="operating_system" class="select form-control" id="id_operating_system"> <option value="" selected="">All</option> <option value="Linux">Linux</option> <option value="RHEL">RHEL</option> <option value="SLES">SLES</option> <option value="Windows">Windows</option> <option value="Windows with SQL Standard">Windows with SQL Standard</option> <option value="Windows with SQL Web">Windows with SQL Web</option> <option value="Windows with SQL Enterprise">Windows with SQL Enterprise</option> <option value="Linux with SQL Standard">Linux with SQL Standard</option> <option value="Linux with SQL Web">Linux with SQL Web</option> <option value="Linux with SQL Enterprise">Linux with SQL Enterprise</option>
+          </select>
+        </div>
+      </div>
 
-          <div class="range-slider">
-              <input type="text" class="js-range-slider" value="" /> <br>
-          </div>
+      <div class="form-group">
+        <div id="div_id_amazon_web_services" class="form-check">
+          <label for="id_amazon_web_services" class="form-check-label">
+            <input type="checkbox" name="amazon_web_services" class="checkboxinput form-check-input" id="id_amazon_web_services" checked="">
+            Amazon web services
+          </label>
+        </div>
+      </div>
 
-          <div class="extra-controls form-inline">
-            <div class="form-group">
-              <input type="text" class="js-input-from form-control" value="0" style="width: 80px; margin-right: 30px;" />
-              <input type="text" class="js-input-to form-control" value="0" style="width: 80px;" />
-            </div>
-          </div><br>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+      <div class="form-group">
+        <div id="div_id_google_cloud_platform" class="form-check">
+          <label for="id_google_cloud_platform" class="form-check-label">
+            <input type="checkbox" name="google_cloud_platform" class="checkboxinput form-check-input" disabled="" id="id_google_cloud_platform">
+            Google cloud platform
+          </label>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div id="div_id_microsoft_azure" class="form-check">
+          <label for="id_microsoft_azure" class="form-check-label">
+            <input type="checkbox" name="microsoft_azure" class="checkboxinput form-check-input" disabled="" id="id_microsoft_azure">
+            Microsoft azure
+          </label>
+        </div>
+      </div>
+
+      <div id="div_id_region" class="form-group">
+        <label for="id_region" class="col-form-label ">
+           Region
+        </label>
+        <div class="">
+          <select name="region" class="select form-control" id="id_region"> <option value="" selected="">All</option> <option value="US East (N. Virgina)">US East (N. Virgina)</option> <option value="US East (Ohio)">US East (Ohio)</option> <option value="US West (Norther California)">US West (Norther California)</option> <option value="US West (Oregon)">US West (Oregon)</option> <option value="Asia Pacific (Mumbai)">Asia Pacific (Mumbai)</option> <option value="Asia Pacific (Seoul)">Asia Pacific (Seoul)</option> <option value="Asia Pacific (Singapore)">Asia Pacific (Singapore)</option> <option value="Asia Pacific (Sydney)">Asia Pacific (Sydney)</option> <option value="Asia Pacific (Tokyo)">Asia Pacific (Tokyo)</option> <option value="Canada (Central)">Canada (Central)</option> <option value="EU (Frankfurt)">EU (Frankfurt)</option> <option value="EU (Ireland)">EU (Ireland)</option> <option value="EU (London)">EU (London)</option> <option value="EU (Paris)">EU (Paris)</option> <option value="EU (Stockholm)">EU (Stockholm)</option> <option value="South America (Sao Paulo)">South America (Sao Paulo)</option> <option value="AWS GovCloud (US-East)">AWS GovCloud (US-East)</option> <option value="AWS GovCloud (US-West)">AWS GovCloud (US-West)</option>
+
+          </select>
+        </div>
+      </div>
+
+      <div id="div_id_vcpus" class="form-group">
+        <label for="id_vcpus" class="col-form-label ">
+            Vcpus
+        </label>
+        <div class="">
+          <input type="number" name="vcpus" class="numberinput form-control" id="id_vcpus">
+        </div>
+      </div>
+
+      <div id="div_id_memory" class="form-group">
+        <label for="id_memory" class="col-form-label ">
+            Memory
+        </label>
+        <div class="">
+          <input type="number" name="memory" step="any" class="numberinput form-control" id="id_memory">
+        </div>
+      </div>
+
+      <div class="range-slider">
+          <input type="text" class="js-range-slider" value="" /> <br>
+      </div>
+
+      <div class="extra-controls form-inline">
+        <div class="form-group">
+          <input type="text" id="id_price_from" class="js-input-from form-control" name="price_from" value="0" style="width: 80px; margin-right: 30px;" />
+          <input type="text" id="id_price_to" class="js-input-to form-control" name="price_to" value="0" style="width: 80px;" />
+        </div>
+      </div><br>
+
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+
+
+
+      <!--
+        <select name="{{ form.operating_system.name }}" class="form-control" id="{{ form.operating_system.id_for_label }}">
+          {% for x,y in form.fields.operating_system.choices %}
+              <option value="{{ x }}"{% if form.fields.operating_system.value == x %}selected{% endif %}>{{ y }}</option>
+          {% endfor %}
+        </select>
+
+        <select name="{{ form.region.name }}" class="form-control" id="{{ form.region.id_for_label }}">
+          {% for x,y in form.fields.region.choices %}
+              <option value="{{ x }}"{% if form.fields.region.value == x %}selected{% endif %}>{{ y }}</option>
+          {% endfor %}
+        </select>
+      -->
     </nav>
 
     <!-- Page Content  -->
