--- a/frontend/templates/instance.html
+++ b/frontend/templates/instance.html
@@ -76,6 +76,81 @@
           </tbody>
         </table>
 
+
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">On Demand</h4><hr>
+                <h5 class="card-title"><span style="font-size: 3em;">$0.5</span> per hour</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Reserved</h4><hr>
+
+                <div id="accordion">
+                  <div class="card">
+                    <div class="card-header" id="headingOne">
+                      <h5 class="mb-0">
+                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          One Year
+                        </button>
+                      </h5>
+                    </div>
+
+                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                      <div class="card-body">
+                        <p class="card-text">Upfront</p>
+                        <p class="card-text">Partial Upfront</p>
+                        <p class="card-text">No upfront</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div class="card-header" id="headingTwo">
+                      <h5 class="mb-0">
+                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                          Three Years
+                        </button>
+                      </h5>
+                    </div>
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                      <div class="card-body">
+                        <p class="card-text">Upfront</p>
+                        <p class="card-text">Partial Upfront</p>
+                        <p class="card-text">No upfront</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card">
+                    <div class="card-header" id="headingThree">
+                      <h5 class="mb-0">
+                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                          Five Years
+                        </button>
+                      </h5>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                      <div class="card-body">
+                        <p class="card-text">Upfront</p>
+                        <p class="card-text">Partial Upfront</p>
+                        <p class="card-text">No upfront</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
       <div class="line"></div>
 
       <h2 style="text-align:center;">Price History</h2>
