--- a/frontend/staticfiles/css/sidebar.css
+++ b/frontend/staticfiles/css/sidebar.css
@@ -18,11 +18,14 @@ p {
 }
 
 a,
-a:hover,
 a:focus {
     color: inherit;
     text-decoration: none;
     transition: all 0.3s;
+}
+
+a:hover {
+  color: #71aaa7;
 }
 
 nav#subnav {
@@ -114,11 +117,11 @@ ul#subnav > li {
     background: #fff;
 }
 
-#sidebar ul li.active>a,
+/* #sidebar ul li.active>a,
 a[aria-expanded="true"] {
     color: #fff;
     background: #6d7fcc;
-}
+} */
 
 a[data-toggle="collapse"] {
     position: relative;
