--- a/frontend/templates/price.html
+++ b/frontend/templates/price.html
@@ -7,6 +7,8 @@
 <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
 {% endblock %}
 
+<!-- SLIDER SOURCE -->
+<!-- https://codepen.io/anon/pen/rbpqME -->
 
 {% block content %}
 <div class="wrapper">
@@ -187,7 +189,7 @@
 
           {% for instance in instances %}
             <tr>
-              <td><a href="{% url 'instance' id=1 %}">{{ instance.instance_type }}</a></td>
+              <td><a href="{% url 'instance' id=instance.sku %}">{{ instance.instance_type }}</a></td>
               <!-- <td>{{ instance.provider }}</td> -->
               <td>{{ instance.region }}</td>
               <td>{{ instance.vcpus }}</td>
