update home page designs

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -40,14 +40,14 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="{% static "img/demo-image-01.jpg" %}" alt="">
+          <img class="img-fluid" src="{% static "img/graph.png" %}" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">See the costs of particular VM types over time.</h4>
-                <p class="mb-0 text-white-50">See the costs of particular VM types over time.</p>
+                <!-- <p class="mb-0 text-white-50">See the costs of particular VM types over time.</p> -->
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -58,14 +58,14 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="{% static "img/demo-image-02.jpg" %}" alt="">
+          <img class="img-fluid" src="{% static "img/balance.png" %}" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">Compare price differences when VM characteristics change.</h4>
-                <p class="mb-0 text-white-50">Compare price differences when VM characteristics change.</p>
+                <!-- <p class="mb-0 text-white-50">Compare price differences when VM characteristics change.</p> -->
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -76,14 +76,14 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="{% static "img/demo-image-01.jpg" %}" alt="">
+          <img class="img-fluid" src="{% static "img/cloud.png" %}" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Compare similar VMs across different regions and cloud providers.</h4>
-                <p class="mb-0 text-white-50">Compare similar VMs across different regions and cloud providers.</p>
+                <!-- <p class="mb-0 text-white-50">Compare similar VMs across different regions and cloud providers.</p> -->
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -94,14 +94,14 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="{% static "img/demo-image-02.jpg" %}" alt="">
+          <img class="img-fluid" src="{% static "img/payment.png" %}" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">Test out different payment types to see what’s right for you.</h4>
-                <p class="mb-0 text-white-50">Test out different payment types to see what’s right for you.</p>
+                <!-- <p class="mb-0 text-white-50">Test out different payment types to see what’s right for you.</p> -->
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
