--- a/frontend/templates/compare.html
+++ b/frontend/templates/compare.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
+{% load crispy_forms_tags %}
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
@@ -10,75 +11,135 @@
 <div class="wrapper">
     <!-- Sidebar -->
     <nav id="sidebar">
-        <form>
-          <div class="form-group">
-            <label for="exampleFormControlSelect1">Operating System</label>
-            <select class="form-control" id="exampleFormControlSelect1">
-              <option>Linux</option>
-              <option>RHEL</option>
-              <option>SLES</option>
-              <option>Windows</option>
-              <option>Windows with SQL Standard</option>
-              <option>Windows with SQL Web</option>
-              <option>Windows with SQL Enterprise</option>
-              <option>Linux with SQL Standard</option>
-              <option>Linux with SQL Web</option>
-              <option>Linux with SQL Enterprise</option>
+      <form method="POST">
+        {% csrf_token %}
+        <div id="div_id_operating_system" class="form-group">
+          <label for="id_operating_system" class="col-form-label ">
+            Operating system
+          </label>
+          <div class="">
+            <select name="operating_system" class="select form-control" id="id_operating_system"> <option value="" selected="">All</option> <option value="Linux">Linux</option> <option value="RHEL">RHEL</option> <option value="SLES">SLES</option> <option value="Windows">Windows</option> <option value="Windows with SQL Standard">Windows with SQL Standard</option> <option value="Windows with SQL Web">Windows with SQL Web</option> <option value="Windows with SQL Enterprise">Windows with SQL Enterprise</option> <option value="Linux with SQL Standard">Linux with SQL Standard</option> <option value="Linux with SQL Web">Linux with SQL Web</option> <option value="Linux with SQL Enterprise">Linux with SQL Enterprise</option>
             </select>
           </div>
-          <div class="filter-group">
-            <h4 class="cloudProvider">Cloud Provider </h4>
-            <label class="checkbox-container"> All
-              <input type="checkbox" checked="checked">
-              <span class="checkmark"></span>
-            </label>
-            <label class="checkbox-container"> AWS
-              <input type="checkbox">
-              <span class="checkmark"></span>
-            </label>
-            <label class="checkbox-container"> MS Azure
-              <input type="checkbox">
-              <span class="checkmark"></span>
+        </div>
+
+        <div class="form-group">
+          <div id="div_id_amazon_web_services" class="form-check">
+            <label for="id_amazon_web_services" class="form-check-label">
+              <input type="checkbox" name="amazon_web_services" class="checkboxinput form-check-input" id="id_amazon_web_services" checked="">
+              Amazon web services
             </label>
           </div>
-          <div class="form-group">
-            <label for="region">Region</label>
-            <select class="form-control" id="region">
-              <option>US East (N. Virgina)</option>
-              <option>US East (Ohio)</option>
-              <option>US West (Norther California)</option>
-              <option>US West (Oregon)</option>
-              <option>Asia Pacific (Mumbai)</option>
-              <option>Asia Pacific (Seoul)</option>
-              <option>Asia Pacific (Singapore)</option>
-              <option>Asia Pacific (Sydney)</option>
-              <option>Asia Pacific (Tokyo)</option>
-              <option>Canada (Central)</option>
-              <option>EU (Frankfurt)</option>
-              <option>EU (Ireland)</option>
-              <option>EU (London)</option>
-              <option>EU (Paris)</option>
-              <option>EU (Stockholm)</option>
-              <option>South America (Sao Paulo)</option>
-              <option>AWS GovCloud (US-East)</option>
-              <option>AWS GovCloud (US-West)</option>
+        </div>
+
+        <div class="form-group">
+          <div id="div_id_google_cloud_platform" class="form-check">
+            <label for="id_google_cloud_platform" class="form-check-label">
+              <input type="checkbox" name="google_cloud_platform" class="checkboxinput form-check-input" disabled="" id="id_google_cloud_platform">
+              Google cloud platform
+            </label>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div id="div_id_microsoft_azure" class="form-check">
+            <label for="id_microsoft_azure" class="form-check-label">
+              <input type="checkbox" name="microsoft_azure" class="checkboxinput form-check-input" disabled="" id="id_microsoft_azure">
+              Microsoft azure
+            </label>
+          </div>
+        </div>
+
+        <div id="div_id_region" class="form-group">
+          <label for="id_region" class="col-form-label ">
+             Region
+          </label>
+          <div class="">
+            <select name="region" class="select form-control" id="id_region"> <option value="" selected="">All</option> <option value="US East (N. Virgina)">US East (N. Virgina)</option> <option value="US East (Ohio)">US East (Ohio)</option> <option value="US West (Norther California)">US West (Norther California)</option> <option value="US West (Oregon)">US West (Oregon)</option> <option value="Asia Pacific (Mumbai)">Asia Pacific (Mumbai)</option> <option value="Asia Pacific (Seoul)">Asia Pacific (Seoul)</option> <option value="Asia Pacific (Singapore)">Asia Pacific (Singapore)</option> <option value="Asia Pacific (Sydney)">Asia Pacific (Sydney)</option> <option value="Asia Pacific (Tokyo)">Asia Pacific (Tokyo)</option> <option value="Canada (Central)">Canada (Central)</option> <option value="EU (Frankfurt)">EU (Frankfurt)</option> <option value="EU (Ireland)">EU (Ireland)</option> <option value="EU (London)">EU (London)</option> <option value="EU (Paris)">EU (Paris)</option> <option value="EU (Stockholm)">EU (Stockholm)</option> <option value="South America (Sao Paulo)">South America (Sao Paulo)</option> <option value="AWS GovCloud (US-East)">AWS GovCloud (US-East)</option> <option value="AWS GovCloud (US-West)">AWS GovCloud (US-West)</option>
             </select>
           </div>
+        </div>
+
+
+        <label for="id_memory" class="col-form-label ">
+            Memory
+        </label>
+        <div class="range-slider">
+            <input type="text" class="memory-range-slider" value="" />
+        </div>
+
+        <div class="extra-controls form-inline">
           <div class="form-group">
-            <label for="vcpus">vCPUs</label>
-            <input type="vcpus" class="form-control" id="vcpus" placeholder="">
+            <input type="text" id="id_memory_from" class="memory-input-from form-control" name="memory_from" value="0" style="width: 80px; margin-right: 30px;" />
+            <input type="text" id="id_memory_to" class="memory-input-to form-control" name="memory_to" value="0" style="width: 80px;" />
           </div>
+        </div><br>
+
+
+        <label for="id_vcpu" class="col-form-label ">
+            vCPUs
+        </label>
+        <div class="range-slider">
+            <input type="text" class="vcpu-range-slider" value="" />
+        </div>
+
+        <div class="extra-controls form-inline">
           <div class="form-group">
-            <label for="memory">Memory</label>
-            <input type="memory" class="form-control" id="memory" placeholder="">
+            <input type="text" id="id_vcpu_from" class="vcpu-input-from form-control" name="vcpu_from" value="0" style="width: 80px; margin-right: 30px;" />
+            <input type="text" id="id_vcpu_to" class="vcpu-input-to form-control" name="vcpu_to" value="0" style="width: 80px;" />
           </div>
+        </div><br>
+
+        <label for="id_price" class="col-form-label ">
+            Price Upfront
+        </label>
+        <div class="range-slider">
+            <input type="text" class="price-range-slider" value="" />
+        </div><br>
+
+        <div class="extra-controls form-inline">
           <div class="form-group">
-            <label for="ecu">ECU</label>
-            <input type="ecu" class="form-control" id="ecu" placeholder="">
+            <input type="text" id="id_price_from" class="price-input-from form-control" name="price_from" value="0" style="width: 80px; margin-right: 30px;" />
+            <input type="text" id="id_price_to" class="price-input-to form-control" name="price_to" value="0" style="width: 80px;" />
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </nav>
+        </div>
+
+
+        <label for="id_pricehr" class="col-form-label ">
+            Price Hourly
+        </label>
+        <div class="range-slider">
+            <input type="text" class="pricehr-range-slider" value="" />
+        </div>
+
+        <div class="extra-controls form-inline">
+          <div class="form-group">
+            <input type="text" id="id_pricehr_from" class="pricehr-input-from form-control" name="pricehr_from" value="0" style="width: 80px; margin-right: 30px;" />
+            <input type="text" id="id_pricehr_to" class="pricehr-input-to form-control" name="pricehr_to" value="0" style="width: 80px;" />
+          </div>
+        </div>
+
+        <br>
+
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+
+
+
+        <!--
+          <select name="{{ form.operating_system.name }}" class="form-control" id="{{ form.operating_system.id_for_label }}">
+            {% for x,y in form.fields.operating_system.choices %}
+                <option value="{{ x }}"{% if form.fields.operating_system.value == x %}selected{% endif %}>{{ y }}</option>
+            {% endfor %}
+          </select>
+
+          <select name="{{ form.region.name }}" class="form-control" id="{{ form.region.id_for_label }}">
+            {% for x,y in form.fields.region.choices %}
+                <option value="{{ x }}"{% if form.fields.region.value == x %}selected{% endif %}>{{ y }}</option>
+            {% endfor %}
+          </select>
+        -->
+      </nav>
 
     <!-- Page Content  -->
     <div id="content">
@@ -89,38 +150,113 @@
         </button>
         <br>
 
+        <nav id="subnav" class="navbar navbar-expand-lg navbar-light bg-light">
+              <ul id="subnav" class="navbar-nav">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">All</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">On Demand</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Reserved</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Spot</a>
+                    </li>
+
+              </ul>
+        </nav>
+
+        <table id="instances" class="table table-striped table-bordered" style="width:100%">
+          <thead>
+              <tr>
+                  <th>Instance</th>
+                  <!-- <th>Provider</th> -->
+                  <th>Region</th>
+                  <th>vCPUs</th>
+                  <th>Memory (GiB)</th>
+                  <th>Clock Speed</th>
+                  <th>Price Type</th>
+                  <th>Price Upfront</th>
+                  <th>Price Per Hour</th>
+              </tr>
+          </thead>
+          <tbody>
+
+          {% for instance in instances %}
+            <tr>
+              <td><a href="{% url 'instance' id=instance.sku %}">{{ instance.instance_type }}</a></td>
+              <!-- <td>{{ instance.provider }}</td> -->
+              <td>{{ instance.region }}</td>
+              <td>{{ instance.vcpus }}</td>
+              <td>{{ instance.memory }}</td>
+              <td>{{ instance.clock_speed }}</td>
+              <td>{% if instance.price_type == 'on_demand' %}on demand{% endif %}</td>
+              <td>{% if instance.priceUpfront %}${{ instance.priceUpfront | floatformat:3 }}{% else %}none{% endif %}</td>
+              <td>${{ instance.pricePerHour }}</td>
+            </tr>
+            {% endfor %}
+
+          </tbody>
+          <tfoot>
+              <tr>
+                <th>Instance</th>
+                <!-- <th>Provider</th> -->
+                <th>Region</th>
+                <th>Operating System</th>
+                <th>VCPUs</th>
+                <th>Memory</th>
+                <!-- <th>ECU</th> -->
+                <th>Price Type</th>
+                <th>Price</th>
+                <th>Price Unit</th>
+              </tr>
+          </tfoot>
+      </table>
+
         <br><br>
 
-        <h2>Collapsible Sidebar Using Bootstrap 4</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <button id="comparebutton" class="btn btn-info" onclick="compareFunction()">
+            Compare
+        </button>
 
         <div class="line"></div>
 
-        <h2>Lorem Ipsum Dolor</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div id="comparepop" class="compareview">
+          <div class="compare-container">
+            <span class="close">&times;</span>
+            <div class="row">
 
-        <div class="line"></div>
+              <div class="column1">
+                <div class="card">
+                </div>
+              </div>
 
-        <h2>Lorem Ipsum Dolor</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <div class="column2">
+                <div class="card">
+                </div>
+              </div>
 
-        <div class="line"></div>
+              <div class="column3">
+                <div class="card">
+                </div>
+              </div>
 
-        <h3>Lorem Ipsum Dolor</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <canvas id="myChart"></canvas>
+            </div>
+          </div>
+      </div>
+
 
     </div>
 
 </div>
 
 
-
 {% endblock %}
-
-
 {% block script %}
+
+<!-- SIDE BAR -->
 <script type="text/javascript">
     $(document).ready(function () {
         $("#sidebar").mCustomScrollbar({
@@ -135,40 +271,57 @@
     });
 </script>
 
-<script type="text/javascript">
-    $(document).ready(function () {
-        $("#sidebar").mCustomScrollbar({
-            theme: "minimal"
-        });
+<!-- SLIDER -->
+<!-- https://codepen.io/anon/pen/rbpqME -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.min.js" ></script> -->
+<script src="{% static 'js/priceSlider.js' %}" ></script>
+<script src="{% static 'js/priceHourlySlider.js' %}" ></script>
+<script src="{% static 'js/memorySlider.js' %}" ></script>
+<script src="{% static 'js/vcpuSlider.js' %}" ></script>
 
-        $('#filterCollapse').on('click', function () {
-            $('#sidebar, #content').toggleClass('active');
-            $('.collapse.in').toggleClass('in');
-            $('a[aria-expanded=true]').attr('aria-expanded', 'false');
-        });
-    });
+<!-- BOOTSTRAP TABLE -->
+<script type="text/javascript">
+  $(document).ready(function() {
+    $('#instances').DataTable( {
+        // "paging":   false,
+        "ordering": true,
+        // "info":     false,
+        "columns": [
+            {"type": "string"},
+            {"type": "string"},
+            {"type": "string"},
+            {"type": "num"},
+            {"type": "num"},
+            {"type": "string"},
+            {"type": "num"},
+            {"type": "string"},
+        ]
+    } );
+  } );
 </script>
 
+<!-- SELECTION -->
 <script type="text/javascript">
-  var ctx = document.getElementById('myChart').getContext('2d');
-  var chart = new Chart(ctx, {
-      // The type of chart we want to create
-      type: 'line',
+  $(document).ready(function() {
+  	 var table = $('#instances').DataTable();
+     table.selectedProducts = 0;
 
-      // The data for our dataset
-      data: {
-          labels: ["January", "February", "March", "April", "May", "June", "July"],
-          datasets: [{
-              label: "My First dataset",
-              backgroundColor: 'rgb(255, 99, 132)',
-              borderColor: 'rgb(255, 99, 132)',
-              data: [0, 10, 5, 2, 20, 30, 45],
-          }]
-      },
+    // selecting products
+    $('#instances tbody').on( 'click', 'tr', function () {
+      if ($(this).hasClass('selected')) {
+        $(this).removeClass('selected');
+        table.selectedProducts -= 1;
+      } else if (table.selectedProducts < 3 && !$(this).hasClass('selected')) {
+          $(this).addClass('selected');
+          table.selectedProducts += 1;
+      }
+    } );
 
-      // Configuration options go here
-      options: {}
-  });
+  } );
 </script>
+
+
+
+
 
 {% endblock %}
